[project]
name = "nanobanano"
description = "A ComfyUI custom node for Google's Gemini 2.5 Flash Image (aka 'Nano Banana') model - the state-of-the-art image generation and editing AI."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["google-generativeai>=0.8.0", "torch>=1.11.0", "pillow>=8.3.0", "numpy>=1.21.0", "requests>=2.25.0"]

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI-NanoBanano"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ShmuelRonen/ComfyUI-NanoBanano/wiki"
"Bug Tracker" = "https://github.com/ShmuelRonen/ComfyUI-NanoBanano/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-NanoBanano"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

